<resources>
    <string name="app_name">MyPortfolio</string>
    <string name="name">Oluwafemi Ojuri</string>
    <string name="track">Mobile Developer</string>
    <string name="desc">Intern-level Android Developer.\nI\'m an Idea maker, explorer and curious.</string>
    <string name="login_text">Login to Portfolio</string>
    <string name="logoDesc">Logo of the activity</string>
    <string name="email_address_placeholder">Email Address</string>
    <string name="login_btn_text">Login</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email address</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="description">Description</string>
    <string name="sign_up">Sign Up</string>
    <string name="msg_alert">No field must be left blank</string>
    <string name="workByDefault">Software Developer</string>
</resources>
