<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/bg_portfolio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/userImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/user"
            app:civ_border_color="#FFF"
            app:civ_border_width="3dp"
            android:layout_marginTop="30dp"/>
        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#EFEFEF"
            android:fontFamily="sans-serif"/>
        <TextView
            android:id="@+id/work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track"
            android:fontFamily="casual"
            android:textSize="18sp"
            android:textColor="@color/text_grey"/>
        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:padding="30dp">
            <TextView
                android:id="@+id/bio_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="#000"
                android:textSize="12sp"
                android:fontFamily="monospace"
                android:lineSpacingExtra="1.8dp"
                android:layout_margin="5dp"
                android:text="@string/desc"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="30dp"
        android:overScrollMode="never"/>

</androidx.constraintlayout.widget.ConstraintLayout>